Gradient gap fix

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -13221,7 +13221,7 @@ footer .social-links a:hover path {
     top: 40px;
     right: -25px;
     height: 1329px;
-    width: 76px;
+    width: 87px;
     background-color: white;
     z-index: 11;
   }
